update RecFun assignment to latest Coursera course